crates/cli/tests/snapshots/lib__check@cant_infer_type_param.nemo.snap
---
source: crates/cli/tests/lib.rs
info:
  program: nemo
  args:
    - check
    - tests/check/cant_infer_type_param.nemo
  env:
    NO_COLOR: "1"
    RUST_BACKTRACE: "0"
input_file: crates/cli/tests/check/cant_infer_type_param.nemo
---
success: false
exit_code: 1
----- stdout -----
[17] Error: Can't infer type of an empty array
    ╭─[ tests/check/cant_infer_type_param.nemo:11:27 ]
    │
 11 │   let s = S { a = 10, b = [] };
    │                           ─┬  
    │                            ╰── Can't infer type of an empty array
────╯

[26] Error: Can't infer type parameter 'b'. Explicitly supply the instantiation
    ╭─[ tests/check/cant_infer_type_param.nemo:11:11 ]
    │
 11 │   let s = S { a = 10, b = [] };
    │           ┬  
    │           ╰── Can't infer type parameter 'b'. Explicitly supply the instantiation
────╯

[17] Error: Can't infer type of an empty array
    ╭─[ tests/check/cant_infer_type_param.nemo:12:13 ]
    │
 12 │   polyF(10, []);
    │             ─┬  
    │              ╰── Can't infer type of an empty array
────╯

[26] Error: Can't infer type parameter 'b'. Explicitly supply the instantiation
    ╭─[ tests/check/cant_infer_type_param.nemo:12:3 ]
    │
 12 │   polyF(10, []);
    │   ──┬──  
    │     ╰──── Can't infer type parameter 'b'. Explicitly supply the instantiation
────╯


----- stderr -----
Error: "Check failed with 4 errors"
